# ucdn-neph

./: .clang-format  .clang-tidy  .codecov.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
config/scripts/: create_ucdn_data.py  create_ucdn_macros.py  makeunicodedata.py
include/: ucdn.h
src/: test-ucdn.c  ucdn-info.c  ucdn-test.c  ucdn.c
